vlib/v/checker/tests/inout/div_op_wrong_left_type_err_a.out
vlib/v/checker/tests/inout/div_op_wrong_left_type_err_a.v:3:5: error: mismatched types `A` and `int`
    1| struct A{}
    2| fn main() {
    3|     A{} / 10
           ~~~
    4| }
